tests/snapshot/error/source_locations/expression/assign/set_property.js
var obj = {
  set foo(_) {
    throw new Error();
  }
};

obj['fo' + 'o'] = 1;